# wrapper-esp32-dev-lyli-t-lora-pager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/launcher/: CMakeLists.txt  Kconfig.projbuild
components/launcher/include/: launcher.hpp
components/launcher/src/: app_info.hpp  app_manager.hpp  launcher.cpp  partition_manager.hpp  storage_manager.hpp
components/launcher/src/core/: app_registry.cpp  app_registry.hpp  boot_manager.cpp  boot_manager.hpp  sd_installer.cpp  sd_installer.hpp
components/launcher/src/hal/: display_base.hpp  i_display.hpp  i_input.hpp  i_partition.hpp  i_storage.hpp  input_base.hpp  partition_base.hpp  storage_base.hpp
components/launcher/src/hal/esp32/: display_esp32.cpp  display_esp32.hpp  input_esp32.cpp  input_esp32.hpp  partition_esp32.cpp  partition_esp32.hpp  storage_esp32.cpp  storage_esp32.hpp
components/launcher/src/interface/: partition_base.hpp  storage_base.hpp  system_base.hpp
components/launcher/src/osal/: i_mutex.hpp  i_time.hpp  mutex_base.hpp  time_base.hpp
components/launcher/src/osal/freertos/: mutex_impl.hpp  time_impl.hpp
components/launcher/src/platform/: partition_impl.hpp  storage_impl.cpp  storage_impl.hpp
components/launcher/src/ui/: screen_app_list.cpp  screen_app_list.hpp  screen_install_progress.cpp  screen_install_progress.hpp  screen_manager.cpp  screen_manager.hpp  screen_sd_browser.cpp  screen_sd_browser.hpp  screen_settings.cpp  screen_settings.hpp
doc/: launcher-reference-analysis.md  t-lorapager.md
main/: CMakeLists.txt  (+2 more)
(+9 files in other folders)
